--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -3,21 +3,21 @@
 
 # servers
 workspace = special:servers, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='servers' -e svs
-bind = ,KP_Page_Up, togglespecialworkspace, servers
-bind = ,KP_Page_Up, exec, resize_center.sh 95% 95%
+bind = , KP_Page_Up, togglespecialworkspace, servers
+bind = , KP_Page_Up, exec, resize_center.sh 95% 95%
 
 workspace = special:sti, rounding:false, monitor:0, on-created-empty:[float] kitty --title='sti' -e sti
-bind = ,KP_Page_Down, togglespecialworkspace, sti
-bind = ,KP_Page_Down, exec, resize_center.sh 98% 95%
+bind = , KP_Page_Down, togglespecialworkspace, sti
+bind = , KP_Page_Down, exec, resize_center.sh 98% 95%
 
 # music
 workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
-bind = ,XF86Tools, togglespecialworkspace, mpdClient
-bind = ,XF86Tools, exec, resize_center.sh 95% 90%
+bind = , XF86Tools, togglespecialworkspace, mpdClient
+bind = , XF86Tools, exec, resize_center.sh 95% 90%
 
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
-bind = ,XF86Mail, togglespecialworkspace, email
-bind = ,XF86Mail, exec, resize_center.sh 95% 95%
+bind = , XF86Mail, togglespecialworkspace, email
+bind = , XF86Mail, exec, resize_center.sh 95% 95%
 # filemanagers
 workspace = special:my_yazi, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='yazi' -e yazi
 bind = $mainMod, e, togglespecialworkspace, my_yazi
@@ -29,15 +29,15 @@ bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
 # notes
 workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 92%; move 54% 3.5%] kitty --title='notes' -e nvim /home/mike/md_notes/index.md
-bind = ,XF86HomePage, togglespecialworkspace, notes
-bind = ,XF86HomePage, focusmonitor, HDMI-A-1
-bind = ,XF86HomePage, centerwindow
-bind = ,XF86HomePage, moveactive, 635 20
+bind = , XF86Calculator, togglespecialworkspace, notes
+bind = , XF86Calculator, focusmonitor, HDMI-A-1
+bind = , XF86Calculator, centerwindow
+bind = , XF86Calculator, moveactive, 635 20
 
 workspace = special:my_copy, rounding:false, on-created-empty:[float; size 90% 95%] copyq toggle
-bind = Ctrl, x, focusmonitor, HDMI-A-1
-bind = Ctrl, x, togglespecialworkspace, my_copy
-bind = Ctrl, x, exec, resize_center.sh 90% 95%
+bind = $mainMod Ctrl, x, focusmonitor, HDMI-A-1
+bind = $mainMod Ctrl, x, togglespecialworkspace, my_copy
+bind = $mainMod Ctrl, x, exec, resize_center.sh 90% 95%
 
 # drop down terminal
 workspace = special:term_util, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] kitty --title='term_util' -e tmux new -s UTILITY
