--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -1,4 +1,16 @@
 $smc = exec, /home/mike/.config/hypr/scripts/smc
+# --------------------------------------------
+bind = $mainMod, S, submap, scripts
+submap = scripts
+bind = , b, exec, smc -n python3 /home/mike/.config/hypr/scripts/bind_csm.py
+bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded"
+bind = , k, exec, killall mako
+bind = , l, exec, pkill listeners
+bind = , s, exec, ~/.config/hypr/listeners/submap_listener.sh
+bind = $mainMod, S, submap, reset
+bind = , escape, submap, reset
+submap = reset
+
 
 # --------------------------------------------
 bind = $mainMod, C, submap, configs
@@ -9,6 +21,7 @@ bind = , d, exec, smc -n "kitty --title "devConf" -e nvim /home/mike/dev/"
 bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/"
 bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/"
 bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/"
+bind = , m, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/mako/config"
 bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/"
 bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/"
 bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/"
@@ -17,13 +30,51 @@ bind = , escape, submap, reset
 submap = reset
 
 # --------------------------------------------
+bind = , XF86HomePage, submap, workspaces
+submap = workspaces
+
+bind = , 1, workspace, 1
+bind = , 2, workspace, 2
+bind = , 3, workspace, 3
+bind = , 4, workspace, 4
+bind = , 5, workspace, 5
+bind = , 6, workspace, 6
+bind = , 7, workspace, 7
+bind = , 8, workspace, 8
+bind = , 9, workspace, 9
+bind = , 0, workspace, 10
+
+# Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind =  SHIFT, 1, movetoworkspace, 1
+bind =  SHIFT, 2, movetoworkspace, 2
+bind =  SHIFT, 3, movetoworkspace, 3
+bind =  SHIFT, 4, movetoworkspace, 4
+bind =  SHIFT, 5, movetoworkspace, 5
+bind =  SHIFT, 6, movetoworkspace, 6
+bind =  SHIFT, 7, movetoworkspace, 7
+bind =  SHIFT, 8, movetoworkspace, 8
+bind =  SHIFT, 9, movetoworkspace, 9
+bind =  SHIFT, 0, movetoworkspace, 10
+
+bind = , XF86Back, layoutmsg, colresize -conf
+bind = , XF86Forward, layoutmsg, colresize +conf
+bind = SHIFT, XF86Forward, layoutmsg, fit all
+bind = SHIFT, XF86Back, layoutmsg, togglefit
+bind = $mainMod, XF86Back, movecurrentworkspacetomonitor, l
+bind = $mainMod, XF86Forward, movecurrentworkspacetomonitor, r
+
+
+bind = , f, togglefloating
+bind = , XF86HomePage, submap, reset
+bind = , escape, submap, reset
+submap = reset
 
 bind = $mainMod, O, submap, opacity
 submap = opacity
 
 bind = , 0, setprop, active, alpha 1.0
 bind = , 1, setprop, active, alpha 0.1
-bind = , 2, setprop, active, alpha 0.2k
+bind = , 2, setprop, active, alpha 0.2
 bind = , 3, setprop, active, alpha 0.3
 bind = , 4, setprop, active, alpha 0.4
 bind = , 5, setprop, active, alpha 0.5
