--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -6,6 +6,7 @@ windowrule = float, class:photoqt
 windowrule = float, class:thunar
 windowrule = float, class:file-jpeg
 windowrule = float, class:Darktable
+windowrule = float, class:zenity
 windowrule = float, title:ExitScript
 windowrule = size 384px 128px, title:ExitScript
 windowrule = float, title:"Save File"
@@ -13,14 +14,14 @@ windowrule = float, title:org.musicbrainz.Picard
 windowrule = size 50% 50%, title:org.musicbrainz.Picard
 windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
 
-windowrule = float, title:hyprConf
-windowrule = float, title:fishConf
-windowrule = float, title:kittyConf
-windowrule = float, title:nvimConf
-windowrule = float, title:wayConf
-windowrule = float, title:binConf
-windowrule = float, title:devConf
-windowrule = float, title:ncmpcppConf
+# windowrule = float, title:hyprConf
+# windowrule = float, title:fishConf
+# windowrule = float, title:kittyConf
+# windowrule = float, title:nvimConf
+# windowrule = float, title:wayConf
+# windowrule = float, title:binConf
+# windowrule = float, title:devConf
+# windowrule = float, title:ncmpcppConf
 # windowrule = float, match:class Thunar, float
 # windowrule = float, match:class com.github.hluk.copyq
 # windowrule = match:class mpv float
