--- a/sources/autostart.conf
+++ b/sources/autostart.conf
@@ -15,8 +15,9 @@ exec-once = copyq --start-server
 exec-once = otd-daemon
 exec-once = swww-daemon
 exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
-exec-once = copyq
+# exec-once = copyq
 # exec-once = tmux new -s -d UTILITY
+exec-once = wl-paste --watch cliphist store
 exec-once = syncthing --no-browser &
 exec-once = flatpak run io.github.martchus.syncthingtray --wait &
 
