--- a/hyprland.conf
+++ b/hyprland.conf
@@ -78,27 +78,27 @@ $bin = /home/mike/.dotFiles/bin/
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 # personal bind
-bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b
-bind = $mainMod SHIFT, P, exec, $bin/pwm
-bind = $mainMod SHIFT, M, exec, $bin/mail
-bind = $mainMod, SPACE, exec, $bin/bar -s
+bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b #-> Waybar Big
+bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
+bind = $mainMod SHIFT, M, exec, $bin/mail #-> Mail
+bind = $mainMod, SPACE, exec, $bin/bar -s #-> Waybar Small
 bind = $mainMod, Return, layoutmsg, swapwithmaster
-bind = $mainMod SHIFT, B, exec, /home/mike/.config/hypr/scripts/swap_config.sh
 bind = $mainMod SHIFT, F, fullscreen
 # bind = $mainMod SHIFT, L, exec, hyprlock
 # Screenshot region and pipe to swappy for editing
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod SHIFT, Return, exec, $terminal
-bind = $mainMod Alt, KP_End, exec, thunar
-bind = $mainMod SHIFT, B, exec, google-chrome-stable --enable-features=UseOzonePlatform --ozone-platform=wayland --password-store=gnome-libsecret %U
-bind = $mainMod, Q, killactive,
-bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh
+bind = $mainMod SHIFT, Return, exec, $terminal #-> Terminal
+bind = $mainMod, Q, killactive
+bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh #-> Exit Script
 # bind = $mainMod, E, exec, thunar
-bind = $mainMod, m, exec, pkill wofi || wofi
-bind = $mainMod, b, exec, wp_random.sh
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # ndwindlla
+bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
+# bind = $mainMod, m, exec, kitty --title="launcher" -e launcher.sh
+bind = $mainMod, b, exec, wp_random.sh #-> wallpaper randomizer
+# bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, P, exec, pick.sh -add default #-> Colorpick Add to list
+bind = $mainMod Ctrl, P, exec, pick.sh -new default #-> Colorpick New list
+bind = $mainMod Alt, P, exec, kitty --title="colorList" nvim ~/Documents/colors/default.css #-> Colorpick List
 bind = $mainMod SHIFT, C, centerwindow 
 
 # Move focus with mainMod + arrow keys
@@ -118,8 +118,8 @@ bind = $mainMod SHIFT, l, layoutmsg, swapcol r
 bind = $mainMod SHIFT, h, layoutmsg, swapcol l
 
 bind = $mainMod SHIFT Ctrl, b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py
-bind = $mainMod Ctrl, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu
-bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = $mainMod Ctrl, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu -i #-> bind list
+bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
 
 
 bind = $mainMod, mouse_down, workspace, e+1
@@ -130,21 +130,22 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = SHIFT, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = SHIFT, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%-
-bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ #-> Volume up 5%
+bindel = SHIFT, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 1%+ #-> Volume up 1%
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- #-> Volume down 5%
+bindel = SHIFT, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%- #-> Volume down 1% 
+bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle #-> Volume mute
+bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle #-> Mic mute
+bindel = , XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ #-> Brightness up 5%
+bindel = , XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- #-> Brightness down 5%
 
 # Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o -
+bindl = , XF86AudioNext, exec, playerctl next #-> Next track
+bindl = , XF86AudioPause, exec, playerctl play-pause #-> Play/Pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause #-> Play/Pause
+bindl = , XF86AudioPrev, exec, playerctl previous #-> Previous track
+bind = , print, exec, grim -g "$(slurp)" - | swappy -f - -o - #-> Screenshot
+bind = SHIFT, print, exec, sleep 4 && grim -g "$(slurp)" - | swappy -f - -o - #-> 4 second Screenshot
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
