--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -47,6 +47,7 @@ plugin {
         column_width = 0.9
         fullscreen_on_one_column = true
 				focus_fit_method = 0
+				explicit_column_widths = 0.33, 0.50, 0.67, 0.90, 1.00
     }
 }
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -61,7 +62,7 @@ decoration {
     dim_special = 0.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -69,10 +70,10 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
-        size = 14
-        passes = 3
-		xray = true
+        enabled = false
+        size = 1
+        passes = 5
+		xray = false
 		ignore_opacity = false
 		special = false
 		popups = true
