--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -2,11 +2,17 @@ $smc = exec, /home/mike/.config/hypr/scripts/smc
 # --------------------------------------------
 bind = $mainMod, S, submap, scripts
 submap = scripts
-bind = , b, exec, smc -n python3 /home/mike/.config/hypr/scripts/bind_csm.py
-bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded"
-bind = , k, exec, killall mako
-bind = , l, exec, pkill listeners
-bind = , s, exec, ~/.config/hypr/listeners/submap_listener.sh
+# rebuild bind reference
+bind = , b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py #-> Update Bind List
+# reload mako
+bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded" #-> reload mako
+# color picker, clear history and pick new color
+bind = SHIFT, P, exec, pick.sh -new default #-> Colorpick New list
+# color picker, add color to history
+bind = , P, exec, pick.sh -add default #-> Colorpick Add to list
+bind = , k, exec, killall mako #-> kill mako
+bind = , l, exec, pkill -f listeners #-> kill listeners
+bind = , s, exec, ~/.config/hypr/listeners/submap_listen.sh #-> Restart submap listener
 bind = $mainMod, S, submap, reset
 bind = , escape, submap, reset
 submap = reset
@@ -16,15 +22,16 @@ submap = reset
 bind = $mainMod, C, submap, configs
 submap = configs
 
-bind = , b, exec, smc -n "kitty --title "binConf" -e tmux && nvim /home/mike/bin/"
-bind = , d, exec, smc -n "kitty --title "devConf" -e nvim /home/mike/dev/"
-bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/"
-bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/"
-bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/"
-bind = , m, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/mako/config"
-bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/"
-bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/"
-bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/"
+# bind = , b, exec, smc -n "kitty --title "binConf" -e nvim /home/mike/bin/" #-> bin folder
+bind = , b, exec, smc -n "kitty --title "configWindow" -e tmux new-session -s bin_configure 'nvim /home/mike/bin/'" #-> bin folder
+bind = , d, exec, smc -n "kitty --title "configWindow" -e tmux new-session -s dev_configure 'nvim /home/mike/dev/'" #-> dev folder
+bind = , h, exec, smc -n "kitty --title "hyprConf" -e tmux new-session -s bin_configure 'nvim /home/mike/.config/hypr/'" #-> hypr folder
+bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/" #-> fish folder
+bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/" #-> kitty folder
+bind = , m, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/mako/config" #-> mako file
+bind = , n, exec, smc -n "kitty --title "nvimConf" -e nvim /home/mike/.config/nvim/" #-> nvim folder
+bind = SHIFT, n, exec, smc -n "kitty --title "ncmpcppConf" -e nvim /home/mike/.config/ncmpcpp/" #-> ncmpcpp folder
+bind = , w, exec, smc -n "kitty --title "wayConf" -e nvim /home/mike/.config/hypr/waybar/" #-> waybar folder
 bind = $mainMod, C, submap, reset
 bind = , escape, submap, reset
 submap = reset
@@ -33,38 +40,40 @@ submap = reset
 bind = , XF86HomePage, submap, workspaces
 submap = workspaces
 
-bind = , 1, workspace, 1
-bind = , 2, workspace, 2
-bind = , 3, workspace, 3
-bind = , 4, workspace, 4
-bind = , 5, workspace, 5
-bind = , 6, workspace, 6
-bind = , 7, workspace, 7
-bind = , 8, workspace, 8
-bind = , 9, workspace, 9
-bind = , 0, workspace, 10
+bind = , 1, exec, smc -h "workspace 1" #-> View workspace 1
+bind = , 2, exec, smc -h "workspace 2" #-> View workspace 2
+bind = , 3, exec, smc -h "workspace 3" #-> View workspace 3
+bind = , 4, exec, smc -h "workspace 4" #-> View workspace 4
+bind = , 5, exec, smc -h "workspace 5" #-> View workspace 5
+bind = , 6, exec, smc -h "workspace 6" #-> View workspace 6
+bind = , 7, exec, smc -h "workspace 7" #-> View workspace 7
+bind = , 8, exec, smc -h "workspace 8" #-> View workspace 8
+bind = , 9, exec, smc -h "workspace 9" #-> View workspace 9
+bind = , 0, exec, smc -h "workspace 10" #-> View workspace 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind =  SHIFT, 1, movetoworkspace, 1
-bind =  SHIFT, 2, movetoworkspace, 2
-bind =  SHIFT, 3, movetoworkspace, 3
-bind =  SHIFT, 4, movetoworkspace, 4
-bind =  SHIFT, 5, movetoworkspace, 5
-bind =  SHIFT, 6, movetoworkspace, 6
-bind =  SHIFT, 7, movetoworkspace, 7
-bind =  SHIFT, 8, movetoworkspace, 8
-bind =  SHIFT, 9, movetoworkspace, 9
-bind =  SHIFT, 0, movetoworkspace, 10
+bind =  SHIFT, 1, exec, smc -h "movetoworkspace 1" #-> Move to WS 1
+bind =  SHIFT, 2, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
+bind =  SHIFT, 3, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
+bind =  SHIFT, 4, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
+bind =  SHIFT, 5, exec, smc -h "movetoworkspace 5" #-> Move to WS 5
+bind =  SHIFT, 6, exec, smc -h "movetoworkspace 6" #-> Move to WS 6
+bind =  SHIFT, 7, exec, smc -h "movetoworkspace 7" #-> Move to WS 7
+bind =  SHIFT, 8, exec, smc -h "movetoworkspace 8" #-> Move to WS 8
+bind =  SHIFT, 9, exec, smc -h "movetoworkspace 9" #-> Move to WS 9
+bind =  SHIFT, 0, exec, smc -h "movetoworkspace 10" #-> Move to WS 10
 
-bind = , XF86Back, layoutmsg, colresize -conf
-bind = , XF86Forward, layoutmsg, colresize +conf
-bind = SHIFT, XF86Forward, layoutmsg, fit all
-bind = SHIFT, XF86Back, layoutmsg, togglefit
-bind = $mainMod, XF86Back, movecurrentworkspacetomonitor, l
-bind = $mainMod, XF86Forward, movecurrentworkspacetomonitor, r
+bind = , XF86Back, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
+bind = , XF86Forward, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
+bind = SHIFT, f, exec, smc -c "layoutmsg fit all" #-> Fit All
+bind = $mainMod, f, exec, smc -c "layoutmsg togglefit" #-> Toggle Fit
+bind = $mainMod, XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-> Move Monitor Left
+bind = $mainMod, XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #-> Move Monitor Right
 
 
 bind = , f, togglefloating
+bind = , r, workspace, 3
+bind = , r, exec, smc -h "workspace 1" #-> Reset View
 bind = , XF86HomePage, submap, reset
 bind = , escape, submap, reset
 submap = reset
@@ -100,10 +109,11 @@ submap = reset
 bind = $mainMod, A, submap, apps
 submap = apps
 
-bind = , q, exec, smc -n qutebrowser
-bind = , b, exec, smc -n google-chrome-stable
-bind = , i, exec, smc -n inkscape
-bind = , k, exec, smc -n krita
+bind = , q, exec, smc -n qutebrowser 								#-> 			qutebrowser
+bind = , b, exec, smc -n google-chrome-stable 						#-> 			chrome
+bind = SHIFT, b, exec, smc -n "google-chrome-stable --incognito" 	#->	chrome incognito
+bind = , i, exec, smc -n inkscape 									#-> 			inkscape
+bind = , k, exec, smc -n krita 										#-> 			krita
 bind = $mainMod, A, submap, reset
 bind = , escape, submap, reset
 submap = reset
