--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -7,6 +7,8 @@ windowrule = float, class:thunar
 windowrule = float, class:file-jpeg
 windowrule = float, class:Darktable
 windowrule = float, class:zenity
+windowrule = float, title:colorList
+windowrule = size 512px 768px, title:colorList
 windowrule = float, title:ExitScript
 windowrule = size 384px 128px, title:ExitScript
 windowrule = float, title:"Save File"
