--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -40,7 +40,7 @@
   },
   "mpd": {
     // "format": "{stateIcon}    {artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
-    "format": "{stateIcon}    {artist} - {title}",
+    "format": "{stateIcon}    <span color=\"#5daaee\">{artist}</span>  - <span color=\"#53eea0\">{title}</span>",
     "port": 6601,
     "server": "localhost",
     "format-disconnected": "Disconnected ",
@@ -63,7 +63,7 @@
     },
     "state-icons": {
       "paused": "",
-      "playing": "",
+      "playing": "<span color=\"#4dee6e\"></span>",
     },
     "tooltip-format": "{album} - ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
     "tooltip-format-disconnected": "MPD (disconnected)",
