--- a/hypridle.conf
+++ b/hypridle.conf
@@ -1,11 +1,11 @@
-# testing times
+testing times
 # $wbt = 10
 # $bt = 20
 # $lst = 30
 # $dt = 35
 # $st = 40
 
-# real times
+real times
 $wbt = 298 
 $bt = 300
 $lst = 600
