--- a/hyprland.conf
+++ b/hyprland.conf
@@ -72,12 +72,12 @@ device {
 }
 
 $bin = /home/mike/.dotFiles/bin/
-###################
-### KEYBINDINGS ###
-###################
+#NOTE: KEYBINDINGS
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 # personal bind
+bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
+bindr = , XF86ZoomIn, exec, follow_mouse.sh yes #-> Follow mouse
 bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b #-> Waybar Big
 bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
 bind = $mainMod SHIFT, M, exec, $bin/mail #-> Mail
@@ -100,26 +100,27 @@ bind = $mainMod, P, exec, pick.sh -add default #-> Colorpick Add to list
 bind = $mainMod Ctrl, P, exec, pick.sh -new default #-> Colorpick New list
 bind = $mainMod Alt, P, exec, kitty --title="colorList" nvim ~/Documents/colors/default.css #-> Colorpick List
 bind = $mainMod SHIFT, C, centerwindow 
+bind = $mainMod, f, togglefloating 
 
 # Move focus with mainMod + arrow keys
-# bind = $mainMod, h, exec, best_keys.sh left
-# bind = $mainMod, l, exec, best_keys.sh right
-bind = $mainMod, h, layoutmsg, move -col
-bind = $mainMod, l, layoutmsg, move +col
-bind = $mainMod SHIFT Ctrl, h, focusmonitor, 0
-bind = $mainMod SHIFT Ctrl, l, focusmonitor, 1
+bind = $mainMod, h, exec, best_keys.sh left
+bind = $mainMod, l, exec, best_keys.sh right
+bind = $mainMod SHIFT, k, exec, best_keys.sh mvup
+bind = $mainMod SHIFT, j, exec, best_keys.sh mvdown
+bind = , XF86Back, focusmonitor, 0
+bind = , XF86Forward, focusmonitor, 1
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
 bind = $mainMod Ctrl, l, layoutmsg, movewindowto r
 bind = $mainMod Ctrl, h, layoutmsg, movewindowto l
 bind = $mainMod Ctrl, k, layoutmsg, movewindowto u
 bind = $mainMod Ctrl, j, layoutmsg, movewindowto d
-bind = $mainMod SHIFT, l, layoutmsg, swapcol r
-bind = $mainMod SHIFT, h, layoutmsg, swapcol l
+bind = $mainMod SHIFT, l, exec, best_keys.sh mvright
+bind = $mainMod SHIFT, h, exec, best_keys.sh mvleft
 
 bind = $mainMod SHIFT Ctrl, b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py
 bind = $mainMod Ctrl, b, exec, cat ~/.config/hypr/.bind_list.txt | rofi -dmenu -i #-> bind list
-bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
+# bind = Ctrl, x, exec, killall rofi || cliphist list | rofi -dmenu -i | cliphist decode | wl-copy #-> clipboard
 
 
 bind = $mainMod, mouse_down, workspace, e+1
