--- a/hyprlock.conf
+++ b/hyprlock.conf
@@ -67,6 +67,7 @@ image {
 
 image {
     monitor = DVI-D-1
+		rotate = 22
     path = /home/mike/Pictures/Julian/julian.jpg
     size = 300 # lesser side if not 1:1 ratio
     rounding = 0 # negative values mean circle
@@ -75,7 +76,23 @@ image {
     rotate = 0 # degrees, counter-clockwise
     reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
     reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
-    position = 0, 100
+    position = -400, 300
+    halign = center
+    valign = center
+    shadow_passes = 1
+}
+
+image {
+    monitor = DVI-D-1
+    path = /home/mike/Pictures/Julian/smiling.jpg
+    size = 300 # lesser side if not 1:1 ratio
+    rounding = 0 # negative values mean circle
+    border_size = 2  
+    border_color = rgb(221, 221, 221)
+    rotate = 0 # degrees, counter-clockwise
+    reload_time = -1 # seconds between reloading, 0 to reload with SIGUSR2
+    reload_cmd =  # command to get new path. if empty, old path will be used. don't run "follow" commands like tail -F
+    position = 300, -300
     halign = center
     valign = center
     shadow_passes = 1
