--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -49,6 +49,18 @@ plugin {
 				focus_fit_method = 0
 				explicit_column_widths = 0.33, 0.50, 0.67, 0.90, 1.00
     }
+	hyprwinwrap {
+        # class is an EXACT match and NOT a regex!
+        class = GLava
+        # you can also use title
+        # title = kitty-bg
+        # you can add the position of the window in a percentage
+        # pos_x = 25
+        # pos_y = 30
+        # you can add the size of the window in a percentage
+        # size_x = 40
+        # size_y = 70
+    }
 }
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
@@ -143,12 +155,14 @@ input {
     kb_layout = us
     kb_variant =
     kb_model = XMEIDAPALM 
-    kb_options = caps:escape_shifted_capslock
-    kb_rules =
+	# kb_options = fkeys:basic_13-24
+	kb_options = fkeys:basic_13-24
+	kb_options = caps:escape_shifted_capslock
+    kb_rules = 
     special_fallthrough = true
 
 
-    follow_mouse = 0
+    follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
