--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -15,6 +15,10 @@ workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[floa
 bind = , XF86Tools, togglespecialworkspace, mpdClient
 bind = , XF86Tools, exec, resize_center.sh 95% 90%
 
+# glava
+workspace = special:glavaWS, rounding:false, monitor:0, on-created-empty: glava
+bind = $mainMod, XF86Tools, togglespecialworkspace, glavaWS
+
 workspace = special:email, rounding:false, monitor:0, on-created-empty:[float; size 85% 85%;] evolution
 bind = , XF86Mail, togglespecialworkspace, email
 bind = , XF86Mail, exec, resize_center.sh 95% 95%
@@ -46,6 +50,6 @@ bind = SHIFT, KP_Up, setfloating
 bind = , KP_Up, exec, resize_center.sh 98% 98%
 bind = SHIFT, KP_Up, movetoworkspace, special:term_util
 
-workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] updater_window.sh
+workspace = special:updater, rounding:false, monitor:0, on-created-empty:[float; size 95% 95%] /home/mike/.config/hypr/scripts/uw.sh
 bind = $mainMod SHIFT, U, togglespecialworkspace, updater
 
