--- a/sources/autostart.conf
+++ b/sources/autostart.conf
@@ -17,4 +17,5 @@ exec-once = sleep 1 && /home/mike/.config/hypr/listeners/submap_listen.sh
 exec-once = wl-paste --watch cliphist store
 exec-once = syncthing --no-browser &
 exec-once = flatpak run io.github.martchus.syncthingtray --wait &
+exec-once = sleep4 && noisetorch -i
 
