--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -23,9 +23,9 @@ bind = $mainMod, C, submap, configs
 submap = configs
 
 # bind = , b, exec, smc -n "kitty --title "binConf" -e nvim /home/mike/bin/" #-> bin folder
-bind = , b, exec, smc -n "kitty --title "configWindow" -e tmux new-session -s bin_configure 'nvim /home/mike/bin/'" #-> bin folder
-bind = , d, exec, smc -n "kitty --title "configWindow" -e tmux new-session -s dev_configure 'nvim /home/mike/dev/'" #-> dev folder
-bind = , h, exec, smc -n "kitty --title "hyprConf" -e tmux new-session -s bin_configure 'nvim /home/mike/.config/hypr/'" #-> hypr folder
+bind = , b, exec, smc -n "kitty --title 'configWindow' -e nvim /home/mike/bin/" #-> bin folder
+bind = , d, exec, smc -n "kitty --title "configWindow" -e nvim /home/mike/dev/" #-> dev folder
+bind = , h, exec, smc -n "kitty --title "hyprConf" -e nvim /home/mike/.config/hypr/" #-> hypr folder
 bind = , f, exec, smc -n "kitty --title "fishConf" -e nvim /home/mike/.config/fish/" #-> fish folder
 bind = , k, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/kitty/" #-> kitty folder
 bind = , m, exec, smc -n "kitty --title "kittyConf" -e nvim /home/mike/.config/mako/config" #-> mako file
@@ -37,8 +37,12 @@ bind = , escape, submap, reset
 submap = reset
 
 # --------------------------------------------
-bind = , XF86HomePage, submap, workspaces
+bind = , XF86Search, submap, workspaces
 submap = workspaces
+
+bind = , s, exec, hyprctl keyword general:layout scrolling #-> Set layout to scrolling
+bind = , d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwindle
+bind = , m, exec, hyprctl keyword general:layout master #-> Set layout to master
 
 bind = , 1, exec, smc -h "workspace 1" #-> View workspace 1
 bind = , 2, exec, smc -h "workspace 2" #-> View workspace 2
@@ -52,10 +56,10 @@ bind = , 9, exec, smc -h "workspace 9" #-> View workspace 9
 bind = , 0, exec, smc -h "workspace 10" #-> View workspace 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind =  SHIFT, 1, exec, smc -h "movetoworkspace 1" #-> Move to WS 1
-bind =  SHIFT, 2, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
-bind =  SHIFT, 3, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
-bind =  SHIFT, 4, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
+bind =  ,XF86Back, exec, smc -h "movetoworkspace 1" #-> Move to WS 1
+bind =  , XF86Forward, exec, smc -h "movetoworkspace 2" #-> Move to WS 2
+bind =  Ctrl, minus, exec, smc -h "movetoworkspace 3" #-> Move to WS 3
+bind =  Ctrl, equal, exec, smc -h "movetoworkspace 4" #-> Move to WS 4
 bind =  SHIFT, 5, exec, smc -h "movetoworkspace 5" #-> Move to WS 5
 bind =  SHIFT, 6, exec, smc -h "movetoworkspace 6" #-> Move to WS 6
 bind =  SHIFT, 7, exec, smc -h "movetoworkspace 7" #-> Move to WS 7
@@ -63,8 +67,8 @@ bind =  SHIFT, 8, exec, smc -h "movetoworkspace 8" #-> Move to WS 8
 bind =  SHIFT, 9, exec, smc -h "movetoworkspace 9" #-> Move to WS 9
 bind =  SHIFT, 0, exec, smc -h "movetoworkspace 10" #-> Move to WS 10
 
-bind = , XF86Back, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
-bind = , XF86Forward, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
+bind = $mainMod, XF86Back, exec, smc -c "layoutmsg colresize -conf" #-> Column Shrink
+bind = $mainMod, XF86Forward, exec, smc -c "layoutmsg colresize +conf" #-> Column Grow
 bind = SHIFT, f, exec, smc -c "layoutmsg fit all" #-> Fit All
 bind = $mainMod, f, exec, smc -c "layoutmsg togglefit" #-> Toggle Fit
 bind = $mainMod, XF86Back, exec, smc -h "movecurrentworkspacetomonitor l" #-> Move Monitor Left
@@ -74,7 +78,8 @@ bind = $mainMod, XF86Forward, exec, smc -h "movecurrentworkspacetomonitor r" #->
 bind = , f, togglefloating
 bind = , r, workspace, 3
 bind = , r, exec, smc -h "workspace 1" #-> Reset View
-bind = , XF86HomePage, submap, reset
+bind = , XF86Search, submap, reset
+bind = , XF86ZoomIn, submap, reset
 bind = , escape, submap, reset
 submap = reset
 
@@ -96,20 +101,13 @@ bind = , escape, submap, reset
 submap = reset
 
 # --------------------------------------------
-bind = $mainMod, G, submap, group
-submap = group
-
-bind = , g, togglegroup
-
-bind = , o, submap, reset
-bind = , escape, submap, reset
-submap = reset
 # --------------------------------------------
 
 bind = $mainMod, A, submap, apps
 submap = apps
 
 bind = , q, exec, smc -n qutebrowser 								#-> 			qutebrowser
+bind = , g, exec, smc -n sleep 1 && glava 									#-> 			glava
 bind = , b, exec, smc -n google-chrome-stable 						#-> 			chrome
 bind = SHIFT, b, exec, smc -n "google-chrome-stable --incognito" 	#->	chrome incognito
 bind = , i, exec, smc -n inkscape 									#-> 			inkscape
