--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -2,7 +2,7 @@
   "reload_style_on_change": true,
   "output": "HDMI-A-1",
   // "layer": "top",
-  "modules-left": ["hyprland/workspaces"],
+  "modules-left": ["custom/current_layout", "hyprland/workspaces"],
   "modules-center": ["hyprland/window"],
   "modules-right": ["idle_inhibitor", "mpd", "clock"],
 
@@ -175,6 +175,12 @@
       "grid": "mmsg -l G",
       "vertical_grid": "mmsg -l VG",
     },
+    "interval": 1,
+  },
+  "custom/current_layout": {
+    "exec": "~/.config/hypr/scripts/current_layout.sh",
+    "return-type": "json",
+    "format": "{text}",
     "interval": 1,
   },
 }
