--- a/hyprland.conf
+++ b/hyprland.conf
@@ -78,10 +78,9 @@ $bin = /home/mike/.dotFiles/bin/
 # personal bind
 bind = , XF86HomePage, exec, follow_mouse.sh no #-> Follow mouse
 bindr = , XF86ZoomIn, exec, follow_mouse.sh yes #-> Follow mouse
-bind = $mainMod SHIFT, SPACE, exec, $bin/bar -b #-> Waybar Big
+bind = $mainMod SHIFT, SPACE, exec, bar -b #-> Waybar Big
 bind = $mainMod SHIFT, P, exec, $bin/pwm #-> Password Manager
-bind = $mainMod SHIFT, M, exec, $bin/mail #-> Mail
-bind = $mainMod, SPACE, exec, $bin/bar -s #-> Waybar Small
+bind = $mainMod, SPACE, exec, bar -s #-> Waybar Small
 bind = $mainMod, Return, layoutmsg, swapwithmaster
 bind = $mainMod SHIFT, F, fullscreen
 # bind = $mainMod SHIFT, L, exec, hyprlock
@@ -95,12 +94,18 @@ bind = $mainMod SHIFT, Q, exec, kitty --title="ExitScript" -e exit_script.sh #->
 bind = $mainMod, m, exec, pkill wofi || wofi #-> menu
 # bind = $mainMod, m, exec, kitty --title="launcher" -e launcher.sh
 bind = $mainMod, b, exec, wp_random.sh #-> wallpaper randomizer
-# bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, P, exec, pick.sh -add default #-> Colorpick Add to list
-bind = $mainMod Ctrl, P, exec, pick.sh -new default #-> Colorpick New list
-bind = $mainMod Alt, P, exec, kitty --title="colorList" nvim ~/Documents/colors/default.css #-> Colorpick List
 bind = $mainMod SHIFT, C, centerwindow 
 bind = $mainMod, f, togglefloating 
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 0
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, exec, best_keys.sh left
