--- a/sources/look_and_feel.conf
+++ b/sources/look_and_feel.conf
@@ -5,6 +5,15 @@
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
+master {
+		mfact = 0.55
+		orientation = center
+		slave_count_for_center_master = 2
+		center_master_fallback = center
+		always_keep_position = true
+
+}
+
 general {
     # gaps_in	gaps between windows, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
     # gaps_out	gaps between windows and monitor edges, also supports css style gaps (top, right, bottom, left -> 5,10,15,20)
@@ -29,7 +38,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
     # Default layout choices are 'dwindle' and 'master'. More layouts available via plugin.
-    layout = scrolling
+    layout = master
     # snap is for floating windows and whether or not they should stick
     # at the edges of the monitor and other windows<D-Bslash>
     snap {
@@ -42,6 +51,7 @@ general {
 	respect_gaps = false
     }
 }
+
 plugin {
     hyprscrolling {
         column_width = 0.9
