--- a/sources/windowrules.conf
+++ b/sources/windowrules.conf
@@ -1,11 +1,9 @@
-# NOTE : Window Rules
-windowrule = float, class:Thunar
+# # NOTE : Window Rules
+windowrule = float, class:thunar
 windowrule = float, class:com.github.hluk.copyq
 windowrule = float, class:mpv
 windowrule = float, class:photoqt
-windowrule = float, class:thunar
 windowrule = float, class:file-jpeg
-windowrule = float, class:Darktable
 windowrule = float, class:zenity
 windowrule = float, title:colorList
 windowrule = size 970px 480px, title:colorList
@@ -16,22 +14,23 @@ windowrule = float, title:org.musicbrainz.Picard
 windowrule = size 50% 50%, title:org.musicbrainz.Picard
 windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
 
-# windowrule = float, title:hyprConf
-# windowrule = float, title:fishConf
-# windowrule = float, title:kittyConf
-# windowrule = float, title:nvimConf
-# windowrule = float, title:wayConf
-# windowrule = float, title:binConf
-# windowrule = float, title:devConf
-# windowrule = float, title:ncmpcppConf
-# windowrule = float, match:class Thunar, float
-# windowrule = float, match:class com.github.hluk.copyq
-# windowrule = match:class mpv float
-# windowrule = match:class photoqt float
-# windowrule = match:class thunar float
+# windowrule = match:class thunar, float yes
+# windowrule = match:class com.github.hluk.copyq, float yes
+# windowrule = match:class mpv, float yes
+# windowrule = match:class photoqt, float yes
 # windowrule = match:class file-jpeg float
-# windowrule = match:class Darktable float
-# windowrule = match:class Thunar size 50% 50%
+# windowrule = match:class zenity, float yes
+# windowrule = match:title colorlist, float yes
+# windowrule = match:title colorlist, size 970px 480px
+# windowrule = match:title hyprConf, float yes
+# windowrule = match:title fishConf, float yes
+# windowrule = match:title kittyConf, float yes
+# windowrule = match:title nvimConf, float yes
+# windowrule = match:title wayConf, float yes
+# windowrule = match:title binConf, float yes
+# windowrule = match:title devConf, float yes
+# windowrule = match:title ncmpcppConf, float yes
+# windowrule = match:class thunar, size 50% 50%
 # windowrule = match:class org.qutebrowser.qutebrowser workspace 1
 # windowrule = match:class live_server monitor:DVI-D-1 special:notes
 # windowrule = match:class Conky noblur
@@ -40,6 +39,6 @@ windowrule = float,title:live_server, monitor:DVI-D-1, special:notes
 # windowrule = match:title org.musicbrainz.Picard float
 # windowrule = match:title org.musicbrainz.Picardsize 50% 50%
 # windowrule = match:title ExitScript float
-
+#
 # windowrule = match:class * suppressevent maximize
 # Fix some dragging issues with XWayland
