--- a/sources/specialWorkspaces.conf
+++ b/sources/specialWorkspaces.conf
@@ -11,7 +11,7 @@ bind = , KP_Page_Down, togglespecialworkspace, sti
 bind = , KP_Page_Down, exec, resize_center.sh 98% 95%
 
 # music
-workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --title='mpdClient' -e ncmpcpp --host localhost
+workspace = special:mpdClient, rounding:false, monitor:0, on-created-empty:[float; size 80% 80%] kitty --config ~/.config/kitty/floating_kitty.conf --title='mpdClient' -e ncmpcpp --host localhost
 bind = , XF86Tools, togglespecialworkspace, mpdClient
 bind = , XF86Tools, exec, resize_center.sh 95% 90%
 
@@ -32,7 +32,7 @@ bind = $mainMod SHIFT, e, togglespecialworkspace, fm
 bind = $mainMod SHIFT, e, exec, resize_center.sh 65% 65%
 
 # notes
-workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 92%; move 54% 3.5%] kitty --title='notes' -e nvim /home/mike/md_notes/index.md
+workspace = special:notes, rounding:false, monitor:0, on-created-empty:[float; size 45% 92%; move 54% 3.5%] kitty --config ~/.config/kitty/floating_kitty.conf --title='notes' -e nvim /home/mike/md_notes/index.md
 bind = , XF86Calculator, togglespecialworkspace, notes
 bind = , XF86Calculator, focusmonitor, HDMI-A-1
 bind = , XF86Calculator, centerwindow
