--- a/sources/submaps.conf
+++ b/sources/submaps.conf
@@ -6,18 +6,27 @@ submap = scripts
 bind = , b, exec, python3 /home/mike/.config/hypr/scripts/bind_csm.py #-> Update Bind List
 # reload mako
 bind = , m, exec, smc -n makoctl reload & notify-send "Mako Reloaded" #-> reload mako
+bind = , i, exec, smc -n info_script #-> Info Files
+bind = , e, exec, smc -n ~/bin/mail #-> Send Email
+bind = , p, exec, smc -n ~/bin/pwm #-> Stuff
 # color picker, clear history and pick new color
-bind = SHIFT, P, exec, pick.sh -new default #-> Colorpick New list
-# color picker, add color to history
-bind = , P, exec, pick.sh -add default #-> Colorpick Add to list
 bind = , k, exec, killall mako #-> kill mako
 bind = , l, exec, pkill -f listeners #-> kill listeners
 bind = , s, exec, ~/.config/hypr/listeners/submap_listen.sh #-> Restart submap listener
 bind = $mainMod, S, submap, reset
 bind = , escape, submap, reset
+
 submap = reset
 
-
+bind = $mainMod, P, submap, colorpick
+submap = colorpick
+bind = , n, exec, smc -n "pick.sh -new default" #-> Colorpick New list hex
+bind = , m, exec, smc -n "pick.sh -new_rgb default" #-> Colorpick New list rgb
+bind = , p, exec, pick.sh -add default #-> Colorpick Add to list hex
+bind = , r, exec, pick.sh -add_rgb default #-> Colorpick Add to list rgb
+bind = , s, exec, smc -n "kitty --title='colorList' nvim ~/Documents/colors/default.css" #-> Colorpick List
+bind = , escape, submap, reset
+submap = reset
 # --------------------------------------------
 bind = $mainMod, C, submap, configs
 submap = configs
@@ -43,17 +52,6 @@ submap = workspaces
 bind = , s, exec, hyprctl keyword general:layout scrolling #-> Set layout to scrolling
 bind = , d, exec, hyprctl keyword general:layout dwindle #-> Set layout to dwindle
 bind = , m, exec, hyprctl keyword general:layout master #-> Set layout to master
-
-bind = , 1, exec, smc -h "workspace 1" #-> View workspace 1
-bind = , 2, exec, smc -h "workspace 2" #-> View workspace 2
-bind = , 3, exec, smc -h "workspace 3" #-> View workspace 3
-bind = , 4, exec, smc -h "workspace 4" #-> View workspace 4
-bind = , 5, exec, smc -h "workspace 5" #-> View workspace 5
-bind = , 6, exec, smc -h "workspace 6" #-> View workspace 6
-bind = , 7, exec, smc -h "workspace 7" #-> View workspace 7
-bind = , 8, exec, smc -h "workspace 8" #-> View workspace 8
-bind = , 9, exec, smc -h "workspace 9" #-> View workspace 9
-bind = , 0, exec, smc -h "workspace 10" #-> View workspace 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind =  ,XF86Back, exec, smc -h "movetoworkspace 1" #-> Move to WS 1
@@ -112,6 +110,7 @@ bind = , b, exec, smc -n google-chrome-stable 						#-> 			chrome
 bind = SHIFT, b, exec, smc -n "google-chrome-stable --incognito" 	#->	chrome incognito
 bind = , i, exec, smc -n inkscape 									#-> 			inkscape
 bind = , k, exec, smc -n krita 										#-> 			krita
+bind = , y, exec, smc -n app.ytmdesktop.ytmdesktop 					#->			youtube
 bind = $mainMod, A, submap, reset
 bind = , escape, submap, reset
 submap = reset
