--- a/waybar/big_bar.jsonc
+++ b/waybar/big_bar.jsonc
@@ -40,7 +40,7 @@
   },
   "mpd": {
     // "format": "{stateIcon}    {artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
-    "format": "{stateIcon}    <span color=\"#5daaee\">{artist}</span>  - <span color=\"#53eea0\">{title}</span>",
+    "format": "{stateIcon}    <span color=\"#a69e96\">{artist}</span>  - <span color=\"#8bd3e0\">{title}</span>",
     "port": 6601,
     "server": "localhost",
     "format-disconnected": "Disconnected ",
@@ -63,7 +63,7 @@
     },
     "state-icons": {
       "paused": "",
-      "playing": "<span color=\"#4dee6e\"></span>",
+      "playing": "<span color=\"#5F6C5F\"></span>",
     },
     "tooltip-format": "{album} - ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ ",
     "tooltip-format-disconnected": "MPD (disconnected)",
@@ -153,28 +153,6 @@
     "exec": "~/.config/mango/waybar/keymode.sh",
     "return-type": "json",
     "format": "{text}",
-    "interval": 1,
-  },
-  "custom/current_layout": {
-    "exec": "~/.config/mango/waybar/current_layout.sh",
-    "return-type": "json",
-    "format": "{text}",
-    "tooltip": false,
-    "menu": "on-click",
-    "menu-file": "~/.config/mango/waybar/LayoutMenu.xml",
-    "menu-actions": {
-      "scroller": "mmsg -l S",
-      "verticle_scroller": "mmsg -l VS",
-      "tile": "mmsg -l T",
-      "center_tile": "mmsg -l CT",
-      "monocle": "mmsg -l M",
-      "vertical_scroller": "mmsg -l VS",
-      "right_tile": "mmsg -l RT",
-      "deck": "mmsg -l K",
-      "vertical_deck": "mmsg -l VK",
-      "grid": "mmsg -l G",
-      "vertical_grid": "mmsg -l VG",
-    },
     "interval": 1,
   },
   "custom/current_layout": {
